# pira-wgpu

./: Cargo.toml  LICENSE  todo.md
assets/: toronto-skyline.ktx2
examples/: 2d_camera.rs  __framebuffer.rs  _framebuffer.rs  camera_controller.rs  compute.rs  draw_line.rs  framebuffer.rs  geometry.rs  im_mode.rs  imidiate_mode.rs  immediate_mode.rs  ktx.rs  pbr.rs  simple_app.rs  template.rs  text.rs  texture.rs
examples/shaders/: compute.wgsl
src/: cameras.rs  framework copy.rs  framework.rs  lib.rs  state.rs
src/factories/: bind_group.rs  mod.rs  render_pass.rs  render_pipeline.rs  texture.rs
src/geometry/: cube.rs  mod.rs  sphere.rs
src/helpers/: cameras.rs  immediate_mode.rs  mod.rs
src/helpers/geometry/: axis.rs  cube.rs  mod.rs  sphere.rs
src/pipelines/: mod.rs  pbr.rs  shadeless.rs  sky.rs
src/pipelines/pbr/: mod.rs  shader_pbr.wgsl
src/pipelines/sky/: mod.rs  shader_brdf_lut.wgsl  shader_convolve_specular.wgsl  shader_env_to_cubemap.wgsl  shader_iradiance.wgsl  shader_irradiance_compute.wgsl  shader_irradiance_cubemap.wgsl  shader_sky_render.wgsl
src/wgpu_helper/: mod.rs  state.rs
src/wgpu_helper/factories/: render_pass.rs  render_pipeline.rs  texture.rs
