[package]
name = "pira-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.4" }
wgpu = "0.19.1"
pollster = "0.2"
bytemuck = { version = "1.4", features = ["derive"] }
image = { version = "0.24.8", default-features = false, features = [
    "png",
    "jpeg",
    "hdr",
    "exr",
] }
glam = { version = "0.24.0", features = ["bytemuck", "serde"] }
rand = { version = "*" }

egui_extras = { version = "0.27.2", features = ["all_loaders"] }
egui = { version = "0.27.2" }
egui-winit = { version = "0.27.2" }
egui-wgpu = { version = "0.27.2" }
puffin = "0.18.1"
puffin_http = "0.15.0"

[dev-dependencies]
ktx2 = "*"
