[package]
name = "pira-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.30.12" }
wgpu = "27.0.1"
pollster = "0.2"
bytemuck = { version = "1.4", features = ["derive"] }
image = { version = "0.24.8", default-features = false, features = [
    "png",
    "jpeg",
    "hdr",
    "exr",
] }
glam = { version = "0.29.2", features = ["bytemuck", "serde"] }
rand = { version = "*" }

egui_extras = { version = "0.33.3", features = ["all_loaders"] }
egui = { version = "0.33.3" }
egui-winit = { version = "0.33.3" }
egui-wgpu = { version = "0.33.3" }
puffin = "0.18.1"
puffin_http = "0.15.0"

[dev-dependencies]
ktx2 = "*"
